Fix white space on line begin Fix [messageActionHistoryClear]

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -854,6 +854,7 @@ $bubble-margin: .25rem;
     color: #000;
     line-height: 21px;
     word-break: break-word;
+    white-space: pre-wrap; // * fix spaces on line begin
     
     /* * {
       overflow: hidden;
